<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pedido"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.project.danilopereira.hungry4pizza.PedidoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvUsuario"
            android:gravity="right"
            android:text="@string/txt_saudacao"
            android:textStyle="bold"
            android:paddingTop="16dp"
            style="@style/Fiap.Header"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvPizza"
            android:text="@string/txt_escolha_pizza" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:id="@+id/cbAtum"
                    android:text="@string/txt_pizza_atum"/>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:id="@+id/cbBacon"
                    android:text="@string/txt_pizza_bacon"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:id="@+id/cbCalabresa"
                    android:text="@string/txt_pizza_calabresa"/>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:id="@+id/cbMussarela"
                    android:text="@string/txt_pizza_mussarela"/>
            </LinearLayout>
        </LinearLayout>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_tamanho_pizaa"
            style="@style/Fiap.Header"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rgTamanhoPizza">
                
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:id="@+id/rbPequena"
                    android:text="@string/txt_pizza_pequena"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:id="@+id/rbMedia"
                    android:text="@string/txt_pizza_media"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:id="@+id/rbGrande"
                    android:text="@string/txt_pizza_grande"/>

            </RadioGroup>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvFormaPagamento"
            android:text="@string/txt_forma_pagamento"
            style="@style/Fiap.Header"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spPagamentos"
            android:gravity="center_horizontal"
            android:entries="@array/opcoes_pagamentos"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_extras"
                style="@style/Fiap.Header"/>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:checked="false"
                        android:id="@+id/cbBordaRecheada"
                        android:text="@string/txt_borda_recheada"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:checked="false"
                        android:id="@+id/cbRecheioExtra"
                        android:text="@string/txt_recheio_extra"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:checked="false"
                        android:id="@+id/cbRefrigerante"
                        android:text="@string/txt_refrigerante"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:checked="false"
                        android:id="@+id/cbSobremesa"
                        android:text="@string/txt_sobremesa"/>
                </LinearLayout>
            </LinearLayout>
        
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button"
                    android:onClick="calcular"
                    android:text="@string/txt_calcular"
                    android:layout_marginTop="16dp"
                    style="@style/Fiap.Botao"/>
    </LinearLayout>
</ScrollView>
