<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.project.danilopereira.hungry4pizza.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_login"
        android:id="@+id/tvLogin"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    
    <EditText
        android:layout_below="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etLogin"
        android:hint="@string/hint_login"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLogin"
        android:id="@+id/tvSenha"
        android:text="@string/txt_senha"
        android:textAppearance="?android:textAppearanceLarge"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etSenha"
        android:layout_below="@+id/tvSenha"
        android:hint="@string/hint_senha"
        android:inputType="textPassword"/>
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSenha"
        android:id="@+id/button"
        android:onClick="logar"
        android:text="@string/botao_login"
        style="@style/Fiap.Botao"/>
</RelativeLayout>
